Clean up parsing int arguments for GUIs