@@ -2,6 +2,7 @@ package me.deadlight.ezchestshop.guis;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.OptionalInt;
 import java.util.UUID;
 
 import com.google.common.base.Preconditions;
@@ -173,15 +174,16 @@ public class NonOwnerShopGUI {
                     player.closeInventory();
                     player.playSound(player.getLocation(), Sound.ITEM_BOOK_PAGE_TURN, 1.0f, 1.0f);
                     SignMenuFactory signMenuFactory = new SignMenuFactory(EzChestShop.getPlugin());
-                    SignMenuFactory.Menu menu = signMenuFactory.newMenu(lm.signEditorGuiBuy(possibleCounts.get(0)))
-                            .reopenIfFail(false).response((thatplayer, strings) -> {
+                    SignMenuFactory.Menu menu = signMenuFactory.newMenu(lm.signEditorGuiBuy(possibleCounts.getFirst())).reopenIfFail(false).response((thatplayer, strings) ->
+                            {
                                 try {
                                     if (strings[0].equalsIgnoreCase("")) {
                                         return false;
                                     }
-                                    if (Utils.isInteger(strings[0])) {
-                                        int amount = Integer.parseInt(strings[0]);
-                                        if (!Utils.amountCheck(amount)) {
+                                    OptionalInt optionalAmount = Utils.tryParseInt(strings[0]);
+                                    if (optionalAmount.isPresent()) {
+                                        int amount = optionalAmount.getAsInt();
+                                        if (amount < 1) {
                                             player.sendMessage(lm.unsupportedInteger());
                                             return false;
                                         }
@@ -197,8 +199,6 @@ public class NonOwnerShopGUI {
                             });
                     menu.open(player);
                     player.sendMessage(lm.enterTheAmount());
-
-
                 } else if (event.isLeftClick()) {
                     //sell
                     if (disabledSell) {
@@ -208,15 +208,16 @@ public class NonOwnerShopGUI {
                     player.closeInventory();
                     player.playSound(player.getLocation(), Sound.ITEM_BOOK_PAGE_TURN, 1.0f, 1.0f);
                     SignMenuFactory signMenuFactory = new SignMenuFactory(EzChestShop.getPlugin());
-                    SignMenuFactory.Menu menu = signMenuFactory.newMenu(lm.signEditorGuiSell(possibleCounts.get(1)))
-                            .reopenIfFail(false).response((thatplayer, strings) -> {
+                    SignMenuFactory.Menu menu = signMenuFactory.newMenu(lm.signEditorGuiSell(possibleCounts.get(1))).reopenIfFail(false).response((thatplayer, strings) ->
+                            {
                                 try {
                                     if (strings[0].equalsIgnoreCase("")) {
                                         return false;
                                     }
-                                    if (Utils.isInteger(strings[0])) {
-                                        int amount = Integer.parseInt(strings[0]);
-                                        if (!Utils.amountCheck(amount)) {
+                                    OptionalInt optionalAmount = Utils.tryParseInt(strings[0]);
+                                    if (optionalAmount.isPresent()) {
+                                        int amount = optionalAmount.getAsInt();
+                                        if (amount < 1) {
                                             player.sendMessage(lm.unsupportedInteger());
                                             return false;
                                         }
@@ -224,8 +225,6 @@ public class NonOwnerShopGUI {
                                     } else {
                                         thatplayer.sendMessage(lm.wrongInput());
                                     }
-
-
                                 } catch (Exception e) {
                                     return false;
                                 }
